--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.baofoo.sdk</groupId>
 			<artifactId>baofoo-fopay-sdk-java</artifactId>
 			<version>20150323</version>
